Added the --purge and --strftime flags to backup-domain.pl, to allow automatic deletion of old backups and date-based backup destinations.
---- Changes since 3.68 ----
Updated the Nag script installer to version 2.3.2, phpMyFAQ to 2.0.13, Wordpress MU to 2.7.1, SugarCRM to 5.2.0d, phpMyAdmin to 3.1.4, MoinMoin to 1.8.3, TWiki to 4.3.1, Coppermine to 1.4.22, Drupal to 6.11/5.17, Flyspray to 0.9.9.6, Horde to 3.3.4, Horde Webmail to 1.2.3, phpList to 2.10.10, and Mantis to 1.1.7.
Added a script installer for Redmine 0.8.3, thanks to Nick Orr.
Added buttons to the Manage SSL Certificate page to copy a domain's cert and key to Webmin or Usermin.
Added CPU and hard drive temperatures to the System Statistics page.
SpamAssassin's server filter spamd can now be activated from within Virtualmin, using a new button on the Spam and Virus Scanning page. You can also turn it on with the --enable-spamd flag to the set-spam API script.
After Virtualmin is installed and the master administrator logs in for the first time, a wizard allowing basic configuration of memory and speed tradeoffs will be displayed. This allows the system to be tuned for web, mail or database hosting, depending on how the admin intends it to be used.
ClamAV's server scanner clamd can now be enabled on FreeBSD from within Virtualmin.
Netmasks can now be optionally specified for IP allocation ranges, rather than being always inherited from the primary interface's netmask.
All backups made manually, on schedule or from the command line are now logged, and can be viewed using the new Backup Logs page.
Added a field to the script upgrade notification to limit warnings to only some virtual servers, or to exclude servers.