@@ -1,4 +1,4 @@
-<header>Add all server administrations to Unix group</header>
+<header>Add domain owners to secondary group</header>
 
 When this field is set to the name of an existing group, all server owner
 Unix users will be added to it as secondary members. This can be useful
