@@ -2555,8 +2555,10 @@ tmpl_emysql_wild=Invalid-looking wildcard for additional MySQL databases
 tmpl_emysql_hosts=Missing allowed MySQL client hosts
 tmpl_emysql_suffix=Missing database suffix
 tmpl_ugroup=Default Unix group for domain owners
+tmpl_sgroup=Add domain owners to secondary group
 tmpl_ugroupsel=Selected group
 tmpl_eugroup=Missing or invalid default Unix group
+tmpl_esgroup=Missing or invalid secondary Unix group
 tmpl_ushell=Initial Unix shell
 tmpl_ushelldef=Default from Custom Shells page
 tmpl_quota=Quota for entire server
@@ -2633,6 +2635,7 @@ tmpl_clone=Clone Template
 tmpl_mailgroup=Secondary group for mail users
 tmpl_ftpgroup=Secondary group for FTP users
 tmpl_dbgroup=Secondary group for database users
+tmpl_ownergroup=Secondary group for domain owners
 tmpl_setgroup=Unix group
 tmpl_setgroups=Listed Unix groups
 tmpl_othergroups=Other groups to which users can be assigned
