@@ -1112,3 +1112,4 @@ ClamAV's server scanner clamd can now be enabled on FreeBSD from within Virtualm
 Netmasks can now be optionally specified for IP allocation ranges, rather than being always inherited from the primary interface's netmask.
 All backups made manually, on schedule or from the command line are now logged, and can be viewed using the new Backup Logs page.
 Added a field to the script upgrade notification to limit warnings to only some virtual servers, or to exclude servers.
+Moved the option for a secondary group for domain owners to the template level.
